[spgemm] some cleanup

--- a/apps/spgemm/spmm/spmm_abrev/Makefile
+++ b/apps/spgemm/spmm/spmm_abrev/Makefile
@@ -1,5 +1,36 @@
-REPLICANT_PATH=$(shell git rev-parse --show-toplevel)
-include $(REPLICANT_PATH)/environment.mk
+##################################################################################
+# BSD 3-Clause License								 #
+# 										 #
+# Copyright (c) 2022, Bespoke Silicon Group					 #
+# All rights reserved.								 #
+# 										 #
+# Redistribution and use in source and binary forms, with or without		 #
+# modification, are permitted provided that the following conditions are met:	 #
+# 										 #
+# 1. Redistributions of source code must retain the above copyright notice, this #
+#    list of conditions and the following disclaimer.				 #
+# 										 #
+# 2. Redistributions in binary form must reproduce the above copyright notice,	 #
+#    this list of conditions and the following disclaimer in the documentation	 #
+#    and/or other materials provided with the distribution.			 #
+# 										 #
+# 3. Neither the name of the copyright holder nor the names of its		 #
+#    contributors may be used to endorse or promote products derived from	 #
+#    this software without specific prior written permission.			 #
+# 										 #
+# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"	 #
+# AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE	 #
+# IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE #
+# DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE	 #
+# FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL	 #
+# DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR	 #
+# SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER	 #
+# CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,	 #
+# OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE	 #
+# OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.		 #
+##################################################################################
+HB_HAMMERBENCH_PATH:=$(shell git rev-parse --show-toplevel)
+include $(HB_HAMMERBENCH_PATH)/mk/environment.mk
 
 test-name		= $(1)_input__$(2)_row-base__$(3)_rows__$(4)_opt__$(5)_parallel
 get-input		= $(firstword $(subst _, ,$(filter %_input,$(subst __, ,$1))))
@@ -54,16 +85,16 @@ $(eval SIMULATION_DIR=$(APPLICATION_PATH)/spmm_abrev/$1)
 endef
 
 # This function needs to be defined
-APPLICATION_PATH=$(EXAMPLES_PATH)/cuda/dwarfs/spmm
+APPLICATION_PATH=$(HB_HAMMERBENCH_PATH)/apps/spgemm/spmm
 
-include $(EXAMPLES_PATH)/cuda/dwarfs/dwarf.mk
+include $(HB_HAMMERBENCH_PATH)/apps/spgemm/parameterized-tb.mk
 
 plots: $(addsuffix .plots,$(TESTS))
 $(addsuffix .plots,$(TESTS)): %.plots: %
 	$(MAKE) -C $* plots
 
 vcache.summary.csv: $(addsuffix /vcache_stats.csv,$(TESTS))
-	@PYTHONPATH=$(EXAMPLES_PATH)/cuda/dwarfs/imports/hammerblade-helpers/py python3 $(APPLICATION_PATH)/py/vcache_abrev.py $^
+	@PYTHONPATH=$(HB_HAMMERBENCH_PATH)/apps/spgemm/imports/hammerblade-helpers/py python3 $(APPLICATION_PATH)/py/vcache_abrev.py $^
 
 dramsim3.summary.csv: $(addsuffix /dramsim3.tag.json,$(TESTS))
-	@PYTHONPATH=$(EXAMPLES_PATH)/cuda/dwarfs/imports/hammerblade-helpers/py python3 $(APPLICATION_PATH)/py/dramsim3_abrev.py $^
+	@PYTHONPATH=$(HB_HAMMERBENCH_PATH)/apps/spgemm/imports/hammerblade-helpers/py python3 $(APPLICATION_PATH)/py/dramsim3_abrev.py $^
