--- a/apps/spgemm/spmm/spmm_abrev_multi_pod_model/Makefile
+++ b/apps/spgemm/spmm/spmm_abrev_multi_pod_model/Makefile
@@ -1,5 +1,37 @@
-REPLICANT_PATH=$(shell git rev-parse --show-toplevel)
-include $(REPLICANT_PATH)/environment.mk
+##################################################################################
+# BSD 3-Clause License								 #
+# 										 #
+# Copyright (c) 2022, Bespoke Silicon Group					 #
+# All rights reserved.								 #
+# 										 #
+# Redistribution and use in source and binary forms, with or without		 #
+# modification, are permitted provided that the following conditions are met:	 #
+# 										 #
+# 1. Redistributions of source code must retain the above copyright notice, this #
+#    list of conditions and the following disclaimer.				 #
+# 										 #
+# 2. Redistributions in binary form must reproduce the above copyright notice,	 #
+#    this list of conditions and the following disclaimer in the documentation	 #
+#    and/or other materials provided with the distribution.			 #
+# 										 #
+# 3. Neither the name of the copyright holder nor the names of its		 #
+#    contributors may be used to endorse or promote products derived from	 #
+#    this software without specific prior written permission.			 #
+# 										 #
+# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"	 #
+# AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE	 #
+# IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE #
+# DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE	 #
+# FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL	 #
+# DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR	 #
+# SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER	 #
+# CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,	 #
+# OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE	 #
+# OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.		 #
+##################################################################################
+
+HB_HAMMERBENCH_PATH:=$(shell git rev-parse --show-toplevel)
+include $(HB_HAMMERBENCH_PATH)/mk/environment.mk
 
 test-name		= $(1)_input__$(2)_partfactor__$(3)_partition__$(4)_opt__$(5)_parallel
 get-input		= $(firstword $(subst _, ,$(filter %_input,$(subst __, ,$1))))
@@ -10,26 +42,23 @@ get-partition		= $(firstword $(subst _, ,$(filter %_partition,$(subst __, ,$1)))
 
 
 # This function needs to be defined
-APPLICATION_PATH=$(EXAMPLES_PATH)/cuda/dwarfs/spmm
+APPLICATION_PATH=$(HB_HAMMERBENCH_PATH)/apps/spgemm/spmm
 
 # full thing
 include $(APPLICATION_PATH)/utils.mk
-PFACTOR=8
+# change this to select the number of submatrices
+# the output is divided into when solving
+# set to 1 for the entire ouput matrix to be solved at once
+# set to 8 to split into 8x8=64 submatrices
+PFACTOR=1
 PARTITIONS=$(call cartesian,$(call range,0,$(PFACTOR)),$(call range,0,$(PFACTOR)),x)
 
 $(foreach part,$(PARTITIONS),\
-$(eval TESTS += $(call test-name,offshore,$(PFACTOR),$(part),yes,yes)))
-#$(eval TESTS += $(call test-name,wiki-vote,$(PFACTOR),$(part),yes,yes)))
-#$(eval TESTS += $(call test-name,road-central,$(PFACTOR),$(part),yes,yes)))
-#$(eval TESTS += $(call test-name,offshore,16,$(part),yes,yes)))
-#$(eval TESTS += $(call test-name,offshore,16,$(part),yes,yes)))
-
-#$(eval TESTS += $(call test-name,roadNet-CA,$(PFACTOR),$(part),yes,yes)))
-# $(eval TESTS += $(call test-name,road-central,$(PFACTOR),$(part),yes,yes))\
-# $(eval TESTS += $(call test-name,hollywood,$(PFACTOR),$(part),yes,yes))\
-# $(eval TESTS += $(call test-name,LiveJournal,$(PFACTOR),$(part),yes,yes))\
-# $(eval TESTS += $(call test-name,soc-Pokec,$(PFACTOR),$(part),yes,yes))\
-# $(eval TESTS += $(call test-name,road-usa,$(PFACTOR),$(part),yes,yes)))
+$(eval TESTS += $(call test-name,offshore,$(PFACTOR),$(part),yes,yes))\
+$(eval TESTS += $(call test-name,wiki-vote,$(PFACTOR),$(part),yes,yes))\
+$(eval TESTS += $(call test-name,road-central,$(PFACTOR),$(part),yes,yes))\
+$(eval TESTS += $(call test-name,offshore,16,$(part),yes,yes))\
+$(eval TESTS += $(call test-name,roadNet-CA,$(PFACTOR),$(part),yes,yes)))
 
 define get-test-parameters
 $(eval INPUT=$(call get-input,$1))
@@ -67,7 +96,7 @@ define get-sim-dir-from-test
 $(eval SIMULATION_DIR=$(APPLICATION_PATH)/spmm_abrev_multi_pod_model/$1)
 endef
 
-include $(EXAMPLES_PATH)/cuda/dwarfs/dwarf.mk
+include $(HB_HAMMERBENCH_PATH)/apps/spgemm/parameterized-tb.mk
 
 $(foreach test,$(TESTS),$(test).stats): %.stats:
 	$(MAKE) -C $* stats
