[apps] jacobi regression

--- a/apps/Makefile
+++ b/apps/Makefile
@@ -21,7 +21,7 @@ APPS := aes
 APPS += blackscholes
 # APPS += fft
 # APPS += gemm
-# APPS += jaccobi
+APPS += jacobi
 # APPS += pagerank
 # APPS += smith_waterman
 # APPS += spgemm
