--- a/apps/aes/Makefile
+++ b/apps/aes/Makefile
@@ -17,4 +17,4 @@ IMPLS := opt-pod
 
 EXECUTION_DIRS := $(foreach impl,$(IMPLS),$(HB_HAMMERBENCH_PATH)/apps/aes/$(impl))
 
-include $(HB_HAMMERBENCH_PATH)/apps/common.mk
+include $(HB_HAMMERBENCH_PATH)/apps/common_complex.mk
