[smith_waterman] fixup

--- a/apps/smith_waterman/Makefile
+++ b/apps/smith_waterman/Makefile
@@ -130,3 +130,7 @@ regression: exec.log
 clean:
 	rm -rf *.ld
 
+include $(HB_HAMMERBENCH_PATH)/apps/common_simple.mk
+
+setup:
+	@echo nothing to be done
