[apps] just run bfs

--- a/apps/Makefile
+++ b/apps/Makefile
@@ -15,16 +15,16 @@ include $(HB_HAMMERBENCH_PATH)/mk/environment.mk
 # CHANGE ME: APPLICATIONS    #
 # Add to or remove from apps #
 ##############################
-APPS := aes
-APPS += barnes_hut
-# APPS += bfs
-APPS += blackscholes
-APPS += fft
-APPS += gemm
-APPS += jacobi
+# APPS := aes
+# APPS += barnes_hut
+APPS += bfs
+# APPS += blackscholes
+# APPS += fft
+# APPS += gemm
+# APPS += jacobi
 # APPS += pagerank
-APPS += smith_waterman
-APPS += spgemm
+# APPS += smith_waterman
+# APPS += spgemm
 
 ###########################
 # directories of each app #
