--- a/apps/Makefile
+++ b/apps/Makefile
@@ -20,7 +20,7 @@ APPS += barnes_hut
 # APPS += bfs
 APPS += blackscholes
 APPS += fft
-APPS += gemm
+APPS += sgemm_group_cooperative
 APPS += jacobi
 # APPS += pagerank
 APPS += smith_waterman
