--- a/apps/fft/Makefile
+++ b/apps/fft/Makefile
@@ -1,18 +1,29 @@
-HB_HAMMERBENCH_PATH:=$(shell git rev-parse --show-toplevel)
-include $(HB_HAMMERBENCH_PATH)/mk/environment.mk
+HB_HAMMERBENCH_PATH = $(shell git rev-parse --show-toplevel)
 
-########################
-# Setup this directory #
-########################
-setup:
-	@echo nothing to be done for $@
+.PHONY: all
+all: generate
 
-##############################
-# CHANGE ME: IMPLEMENTATIONS #
-##############################
-IMPLS := 128
-# IMPLS += 256
+# call to generate a test name
+test-name = size_$(1)
 
-EXECUTION_DIRS := $(foreach impl,$(IMPLS),$(HB_HAMMERBENCH_PATH)/apps/fft/$(impl))
+# call to get parameter from test name
+get-size = $(lastword $(subst _, ,$(filter size_%,$(subst __, ,$(1)))))
 
+# defines tests
+TESTS =
+include tests.mk
+
+TESTS_DIRS = $(TESTS)
+
+$(addsuffix /parameters.mk,$(TESTS_DIRS)): %/parameters.mk:
+	@echo Creating $@
+	@mkdir -p $(dir $@)
+	@touch $@
+	@echo test-name  = $* >> $@
+	@echo size = $(call get-size,$*) >> $@
+
+include $(HB_HAMMERBENCH_PATH)/mk/testbench_common.mk
+
+# for regression
+EXECUTION_DIRS := (addprefix $(APP_PATH)/,$(TESTS_DIRS))
 include $(HB_HAMMERBENCH_PATH)/apps/common_complex.mk
