--- a/apps/fft/256/Makefile
+++ b/apps/fft/256/Makefile
@@ -1,134 +1,67 @@
-##################################################################################
-# BSD 3-Clause License								 #
-# 										 #
-# Copyright (c) 2022, Bespoke Silicon Group					 #
-# All rights reserved.								 #
-# 										 #
-# Redistribution and use in source and binary forms, with or without		 #
-# modification, are permitted provided that the following conditions are met:	 #
-# 										 #
-# 1. Redistributions of source code must retain the above copyright notice, this #
-#    list of conditions and the following disclaimer.				 #
-# 										 #
-# 2. Redistributions in binary form must reproduce the above copyright notice,	 #
-#    this list of conditions and the following disclaimer in the documentation	 #
-#    and/or other materials provided with the distribution.			 #
-# 										 #
-# 3. Neither the name of the copyright holder nor the names of its		 #
-#    contributors may be used to endorse or promote products derived from	 #
-#    this software without specific prior written permission.			 #
-# 										 #
-# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"	 #
-# AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE	 #
-# IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE #
-# DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE	 #
-# FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL	 #
-# DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR	 #
-# SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER	 #
-# CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,	 #
-# OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE	 #
-# OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.		 #
-##################################################################################
+REPLICANT_PATH = $(shell git rev-parse --show-toplevel)
 
-# This Makefile compiles, links, and executes examples Run `make help`
-# to see the available targets for the selected platform.
+.PHONY: all
+all: generate
 
-################################################################################
-# environment.mk verifies the build environment and sets the following
-# makefile variables:
-#
-# LIBRAIRES_PATH: The path to the libraries directory
-# HARDWARE_PATH: The path to the hardware directory
-# EXAMPLES_PATH: The path to the examples directory
-# BASEJUMP_STL_DIR: Path to a clone of BaseJump STL
-# BSG_MANYCORE_DIR: Path to a clone of BSG Manycore
-###############################################################################
 
-HB_HAMMERBENCH_PATH:=$(shell git rev-parse --show-toplevel)
-include $(HB_HAMMERBENCH_PATH)/mk/environment.mk
+# call to generate a test name
+test-name = num-iter_$(1)__warm-cache_$(2)
 
-SPMD_SRC_PATH = $(BSG_MANYCORE_DIR)/software/spmd
+# call to get parameter from test name
+get-num-iter = $(lastword $(subst _, ,$(filter num-iter_%,$(subst __, ,$(1)))))
+get-warm-cache = $(lastword $(subst _, ,$(filter warm-cache_%,$(subst __, ,$(1)))))
 
-# KERNEL_NAME is the name of the CUDA-Lite Kernel
-KERNEL_NAME = fft_256x256_all_no_twiddle
+# defines tests
+TESTS = 
+include tests.mk
 
-###############################################################################
-# Host code compilation flags and flow
-###############################################################################
+TESTS_DIRS = $(TESTS)
 
-# TEST_SOURCES is a list of source files that need to be compiled
-TEST_SOURCES = main.c
+$(addsuffix /parameters.mk,$(TESTS_DIRS)): %/parameters.mk:
+	@echo Creating $@
+	@mkdir -p $(dir $@)
+	@touch $@
+	@echo test-name  = $* >> $@
+	@echo num-iter = $(call get-num-iter,$*) >> $@
+	@echo warm-cache = $(call get-warm-cache,$*) >> $@
 
-DEFINES += -D_XOPEN_SOURCE=500 -D_BSD_SOURCE -D_DEFAULT_SOURCE
-DEFINES += -DLOCAL_POINTS=256
-CDEFINES += 
-CXXDEFINES += 
+$(addsuffix /app_path.mk,$(TESTS_DIRS)): %/app_path.mk: app_path.mk
+	@echo Creating $@
+	@mkdir -p $(dir $@)
+	@cp $< $@
 
-FLAGS     = -g -Wall -Wno-unused-function -Wno-unused-variable
-CFLAGS   += -std=c99 $(FLAGS)
-CXXFLAGS += -std=c++11 $(FLAGS)
+$(addsuffix /Makefile,$(TESTS_DIRS)): %/Makefile: template.mk
+	@echo Creating $@
+	@mkdir -p $(dir $@)
+	@cp template.mk $@
 
-# compilation.mk defines rules for compilation of C/C++
-include $(EXAMPLES_PATH)/compilation.mk
+$(TESTS_DIRS): %: %/app_path.mk
+$(TESTS_DIRS): %: %/parameters.mk
+$(TESTS_DIRS): %: %/Makefile
 
-###############################################################################
-# Host code link flags and flow
-###############################################################################
+generate: $(TESTS_DIRS)
 
-LDFLAGS +=
+$(addsuffix .profile,$(TESTS)): %.profile: %
+	$(MAKE) -C $< profile.log
 
-# link.mk defines rules for linking of the final execution binary.
-include $(EXAMPLES_PATH)/link.mk
+$(addsuffix .pc-histogram,$(TESTS)): %.pc-histogram: %
+	$(MAKE) -C $< pc-histogram.log
 
-###############################################################################
-# Device code compilation flow
-###############################################################################
+$(addsuffix .exec,$(TESTS)): %.exec: %
+	$(MAKE) -C $< exec.log
 
-# BSG_MANYCORE_KERNELS is a list of manycore executables that should
-# be built before executing.
-BSG_MANYCORE_KERNELS = kernel.riscv
+$(addsuffix .stats,$(TESTS)): %.stats: %
+	$(MAKE) -C $< stats
 
-# Tile Group Dimensions
-TILE_GROUP_DIM_X = 16
-TILE_GROUP_DIM_Y = 8
+$(addsuffix .pchistpdf,$(TESTS)): %.pchistpdf: %
+	$(MAKE) -C $< pchistpdf
 
-kernel.rvo: ../common/fft.hpp
-kernel.rvo: RISCV_INCLUDES += -I../common
+.PHONY: profile exec
 
-kernel.riscv: kernel.rvo
-kernel.rvo: RISCV_CXX=$(RISCV_CLANGXX)
-
-# Tile Group Dimensions
-RISCV_DEFINES += -Dbsg_tiles_X=$(TILE_GROUP_DIM_X)
-RISCV_DEFINES += -Dbsg_tiles_Y=$(TILE_GROUP_DIM_Y)
-
-include $(EXAMPLES_PATH)/cuda/riscv.mk
-
-###############################################################################
-# Execution flow
-#
-# C_ARGS: Use this to pass arguments that you want to appear in argv
-#         For SPMD tests C arguments are: <Path to RISC-V Binary> <Test Name>
-#
-# SIM_ARGS: Use this to pass arguments to the simulator
-###############################################################################
-C_ARGS ?= $(BSG_MANYCORE_KERNELS) $(KERNEL_NAME)
-
-SIM_ARGS ?=
-
-# Include platform-specific execution rules
-include $(EXAMPLES_PATH)/execution.mk
-
-###############################################################################
-# Regression Flow
-###############################################################################
-
-regression: exec.log
-	@grep "BSG REGRESSION TEST .*PASSED.*" $< > /dev/null
-
-.DEFAULT_GOAL := help
-
-.PHONY: clean
-
-clean:
-
+pc-histogram: $(addsuffix .pc-histogram,$(TESTS))
+profile: $(addsuffix .profile,$(TESTS))
+exec:    $(addsuffix .exec,$(TESTS))
+stats:   $(addsuffix .stats,$(TESTS))
+pchistpdf: $(addsuffix .pchistpdf,$(TESTS))
+purge:
+	rm -rf $(TESTS_DIRS)
