--- a/apps/memcpy/Makefile
+++ b/apps/memcpy/Makefile
@@ -1,4 +1,4 @@
-REPLICANT_PATH = $(shell git rev-parse --show-toplevel)
+HB_HAMMERBENCH_PATH = $(shell git rev-parse --show-toplevel)
 
 .PHONY: all
 all: generate
@@ -24,45 +24,10 @@ $(addsuffix /parameters.mk,$(TESTS_DIRS)): %/parameters.mk:
 	@echo buffer-size = $(call get-buffer-size,$*) >> $@
 	@echo warm-cache = $(call get-warm-cache,$*) >> $@
 
-$(addsuffix /app_path.mk,$(TESTS_DIRS)): %/app_path.mk: app_path.mk
-	@echo Creating $@
-	@mkdir -p $(dir $@)
-	@cp $< $@
+include $(HB_HAMMERBENCH_PATH)/mk/testbench_common.mk
 
-$(addsuffix /Makefile,$(TESTS_DIRS)): %/Makefile: template.mk
-	@echo Creating $@
-	@mkdir -p $(dir $@)
-	@cp template.mk $@
-
-$(TESTS_DIRS): %: %/app_path.mk
-$(TESTS_DIRS): %: %/parameters.mk
-$(TESTS_DIRS): %: %/Makefile
-
-generate: $(TESTS_DIRS)
-
-$(addsuffix .profile,$(TESTS)): %.profile: %
-	$(MAKE) -C $< profile.log
-
-$(addsuffix .pc-histogram,$(TESTS)): %.pc-histogram: %
-	$(MAKE) -C $< pc-histogram.log
-
-$(addsuffix .exec,$(TESTS)): %.exec: %
-	$(MAKE) -C $< exec.log
-
-$(addsuffix .stats,$(TESTS)): %.stats: %
-	$(MAKE) -C $< stats
-
-$(addsuffix .pchistpdf,$(TESTS)): %.pchistpdf: %
-	$(MAKE) -C $< pchistpdf
-
-.PHONY: profile exec
-
-pc-histogram: $(addsuffix .pc-histogram,$(TESTS))
-profile: $(addsuffix .profile,$(TESTS))
-exec:    $(addsuffix .exec,$(TESTS))
-stats:	 $(addsuffix .stats,$(TESTS))
-pchistpdf: $(addsuffix .pchistpdf,$(TESTS))
-purge:
-	rm -rf $(TESTS_DIRS)
+# for regression
+EXECUTION_DIRS := (addprefix $(APP_PATH)/,$(TESTS_DIRS))
+include $(HB_HAMMERBENCH_PATH)/apps/common_complex.mk
 
 
