--- a/apps/memcpy/Makefile
+++ b/apps/memcpy/Makefile
@@ -27,7 +27,7 @@ $(addsuffix /parameters.mk,$(TESTS_DIRS)): %/parameters.mk:
 include $(HB_HAMMERBENCH_PATH)/mk/testbench_common.mk
 
 # for regression
-EXECUTION_DIRS := (addprefix $(APP_PATH)/,$(TESTS_DIRS))
+EXECUTION_DIRS := $(addprefix $(APP_PATH)/,$(TESTS_DIRS))
 include $(HB_HAMMERBENCH_PATH)/apps/common_complex.mk
 
 
