--- a/apps/memcpy/Makefile
+++ b/apps/memcpy/Makefile
@@ -4,9 +4,11 @@ HB_HAMMERBENCH_PATH = $(shell git rev-parse --show-toplevel)
 all: generate
 
 # call to generate a test name
-test-name = buffer-size_$(1)__warm-cache_$(2)
+test-name = tile-x_$(1)__tile-y_$(2)__buffer-size_$(3)__warm-cache_$(4)
 
 # call to get parameter from test name
+get-tile-x = $(lastword $(subst _, ,$(filter tile-x_%,$(subst __, ,$(1)))))
+get-tile-y = $(lastword $(subst _, ,$(filter tile-y_%,$(subst __, ,$(1)))))
 get-buffer-size = $(lastword $(subst _, ,$(filter buffer-size_%,$(subst __, ,$(1)))))
 get-warm-cache = $(lastword $(subst _, ,$(filter warm-cache_%,$(subst __, ,$(1)))))
 
@@ -21,6 +23,8 @@ $(addsuffix /parameters.mk,$(TESTS_DIRS)): %/parameters.mk:
 	@mkdir -p $(dir $@)
 	@touch $@
 	@echo test-name  = $* >> $@
+	@echo tile-x = $(call get-tile-x,$*) >> $@
+	@echo tile-y = $(call get-tile-y,$*) >> $@
 	@echo buffer-size = $(call get-buffer-size,$*) >> $@
 	@echo warm-cache = $(call get-warm-cache,$*) >> $@
 
