--- a/apps/gups_rmw/Makefile
+++ b/apps/gups_rmw/Makefile
@@ -4,9 +4,11 @@ HB_HAMMERBENCH_PATH = $(shell git rev-parse --show-toplevel)
 all: generate
 
 # call to generate a test name
-test-name = A-size_$(1)__warm-cache_$(2)
+test-name = tile-x_$(1)__tile-y_$(2)__A-size_$(3)__warm-cache_$(4)
 
 # call to get parameter from test name
+get-tile-x = $(lastword $(subst _, ,$(filter tile-x_%,$(subst __, ,$(1)))))
+get-tile-y = $(lastword $(subst _, ,$(filter tile-y_%,$(subst __, ,$(1)))))
 get-A-size = $(lastword $(subst _, ,$(filter A-size_%,$(subst __, ,$(1)))))
 get-warm-cache = $(lastword $(subst _, ,$(filter warm-cache_%,$(subst __, ,$(1)))))
 
@@ -22,6 +24,8 @@ $(addsuffix /parameters.mk,$(TESTS_DIRS)): %/parameters.mk:
 	@mkdir -p $(dir $@)
 	@touch $@
 	@echo test-name  = $* >> $@
+	@echo tile-x = $(call get-tile-x,$*) >> $@
+	@echo tile-y = $(call get-tile-y,$*) >> $@
 	@echo A-size = $(call get-A-size,$*) >> $@
 	@echo warm-cache = $(call get-warm-cache,$*) >> $@
 
