--- a/apps/tile_gups/Makefile
+++ b/apps/tile_gups/Makefile
@@ -4,13 +4,12 @@ HB_HAMMERBENCH_PATH = $(shell git rev-parse --show-toplevel)
 all: generate
 
 # call to generate a test name
-test-name = tile-x_$(1)__tile-y_$(2)__buffer-size_$(3)__warm-cache_$(4)
+test-name = tile-x_$(1)__tile-y_$(2)__unroll_$(3)
 
 # call to get parameter from test name
 get-tile-x = $(lastword $(subst _, ,$(filter tile-x_%,$(subst __, ,$(1)))))
 get-tile-y = $(lastword $(subst _, ,$(filter tile-y_%,$(subst __, ,$(1)))))
-get-buffer-size = $(lastword $(subst _, ,$(filter buffer-size_%,$(subst __, ,$(1)))))
-get-warm-cache = $(lastword $(subst _, ,$(filter warm-cache_%,$(subst __, ,$(1)))))
+get-unroll = $(lastword $(subst _, ,$(filter unroll_%,$(subst __, ,$(1)))))
 
 # defines tests
 TESTS =
@@ -25,13 +24,10 @@ $(addsuffix /parameters.mk,$(TESTS_DIRS)): %/parameters.mk:
 	@echo test-name  = $* >> $@
 	@echo tile-x = $(call get-tile-x,$*) >> $@
 	@echo tile-y = $(call get-tile-y,$*) >> $@
-	@echo buffer-size = $(call get-buffer-size,$*) >> $@
-	@echo warm-cache = $(call get-warm-cache,$*) >> $@
+	@echo unroll = $(call get-unroll,$*) >> $@
 
 include $(HB_HAMMERBENCH_PATH)/mk/testbench_common.mk
 
 # for regression
 EXECUTION_DIRS := $(addprefix $(APP_PATH)/,$(TESTS_DIRS))
 include $(HB_HAMMERBENCH_PATH)/apps/common_complex.mk
-
-
