--- a/apps/spgemm/spmm_abrev_multi_pod_model/Makefile
+++ b/apps/spgemm/spmm_abrev_multi_pod_model/Makefile
@@ -51,12 +51,13 @@ include $(APPLICATION_PATH)/utils.mk
 # set to 1 for the entire ouput matrix to be solved at once
 # set to 8 to split into 8x8=64 submatrices
 # CHANGE ME: PARTITIONING
-PFACTOR=1
+PFACTOR=8
 PARTITIONS=$(call cartesian,$(call range,0,$(PFACTOR)),$(call range,0,$(PFACTOR)),x)
 
 # CHANGE ME: INPUTS
 $(foreach part,$(PARTITIONS),\
-$(eval TESTS += $(call test-name,wiki-vote,$(PFACTOR),$(part),yes,yes)))
+$(eval TESTS += $(call test-name,u16k8,$(PFACTOR),$(part),yes,yes)))
+#$(eval TESTS += $(call test-name,wiki-vote,$(PFACTOR),$(part),yes,yes)))
 # $(eval TESTS += $(call test-name,offshore,$(PFACTOR),$(part),yes,yes))\
 # $(eval TESTS += $(call test-name,road-central,$(PFACTOR),$(part),yes,yes))\
 # $(eval TESTS += $(call test-name,roadNet-CA,$(PFACTOR),$(part),yes,yes)))
