--- a/apps/aes/opt-pod/Makefile
+++ b/apps/aes/opt-pod/Makefile
@@ -1,34 +1,3 @@
-##################################################################################
-# BSD 3-Clause License								 #
-# 										 #
-# Copyright (c) 2022, Bespoke Silicon Group					 #
-# All rights reserved.								 #
-# 										 #
-# Redistribution and use in source and binary forms, with or without		 #
-# modification, are permitted provided that the following conditions are met:	 #
-# 										 #
-# 1. Redistributions of source code must retain the above copyright notice, this #
-#    list of conditions and the following disclaimer.				 #
-# 										 #
-# 2. Redistributions in binary form must reproduce the above copyright notice,	 #
-#    this list of conditions and the following disclaimer in the documentation	 #
-#    and/or other materials provided with the distribution.			 #
-# 										 #
-# 3. Neither the name of the copyright holder nor the names of its		 #
-#    contributors may be used to endorse or promote products derived from	 #
-#    this software without specific prior written permission.			 #
-# 										 #
-# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"	 #
-# AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE	 #
-# IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE #
-# DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE	 #
-# FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL	 #
-# DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR	 #
-# SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER	 #
-# CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,	 #
-# OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE	 #
-# OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.		 #
-##################################################################################
 
 ################################################################################
 # environment.mk verifies the build environment and sets the following
@@ -57,6 +26,10 @@ VPATH = ../tiny-AES-c
 ###############################################################################
 TILE_GROUP_DIM_X = 16
 TILE_GROUP_DIM_Y = 8
+NUM_ITER = 4
+#TILE_GROUP_DIM_X = 1
+#TILE_GROUP_DIM_Y = 1
+#NUM_ITER = 1
 
 # TEST_SOURCES is a list of source files that need to be compiled
 TEST_SOURCES = main.cpp
@@ -67,6 +40,7 @@ aes.o: CFLAGS += -DHOST_CODE
 DEFINES += -D_XOPEN_SOURCE=500 -D_BSD_SOURCE -D_DEFAULT_SOURCE -DECB=0 -DCTR=0
 DEFINES += -DTILE_GROUP_DIM_X=$(TILE_GROUP_DIM_X)
 DEFINES += -DTILE_GROUP_DIM_Y=$(TILE_GROUP_DIM_Y)
+DEFINES += -DNUM_ITER=$(NUM_ITER)
 CDEFINES += 
 CXXDEFINES += 
 
@@ -98,15 +72,15 @@ BSG_MANYCORE_KERNELS = kernel.riscv
 # the default. To view the disassembly, type `make kernel.dis`
 
 #tiny-AES-c/aes.rvo: RISCV_CXX = $(RISCV_CLANG)
-aes.rvo: RISCV_OPT_LEVEL = -O3
-aes.rvo: RISCV_DEFINES += -DECB=0 -DCTR=0
-aes.rvo: RISCV_DEFINES += -DBSG_MANYCORE
-aes.rvo: RISCV_DEFINES += -DBSG_MANYCORE_OPTIMIZED
-aes.rvo: RISCV_DEFINES += -DBSG_MANYCORE_SBOX_LOCAL
-aes.rvo: RISCV_DEFINES += -DBSG_MANYCORE_NODECRYPT
-kernel.rvo: RISCV_INCLUDES += -I../tiny-AES-c
+#aes_kernel.rvo: RISCV_OPT_LEVEL = -O3
+aes_kernel.rvo: RISCV_DEFINES += -DECB=0 -DCTR=0
+aes_kernel.rvo: RISCV_DEFINES += -DBSG_MANYCORE
+aes_kernel.rvo: RISCV_DEFINES += -DBSG_MANYCORE_OPTIMIZED
+aes_kernel.rvo: RISCV_DEFINES += -DBSG_MANYCORE_SBOX_LOCAL
+aes_kernel.rvo: RISCV_DEFINES += -DBSG_MANYCORE_NODECRYPT
+kernel.rvo: RISCV_INCLUDES += -I.
 
-kernel.riscv: kernel.rvo aes.rvo
+kernel.riscv: kernel.rvo aes_kernel.rvo
 
 # Tile Group Dimensions
 RISCV_DEFINES += -Dbsg_tiles_X=$(TILE_GROUP_DIM_X)
@@ -142,4 +116,6 @@ regression: exec.log
 
 clean:
 	rm -rf aes.rvo
+	rm -rf stats
+	rm -rf vanilla_core_pc_hist.csv
 
