[spgemm] makefile update for stat collection

--- a/apps/spgemm/pod-size/Makefile
+++ b/apps/spgemm/pod-size/Makefile
@@ -130,3 +130,6 @@ pod-size-stall-breakdown:
 	PYTHONPATH=$(BSG_MANYCORE_DIR)/software/py/ python3 \
 	$(HB_HAMMERBENCH_PATH)/py/pod-size-stall-breakdown.py \
 	--spgemm $(TESTS)
+	PYTHONPATH=$(BSG_MANYCORE_DIR)/software/py/ python3 \
+	$(HB_HAMMERBENCH_PATH)/py/pod-size-vcache-stall-breakdown.py \
+	--spgemm $(TESTS)
